WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37659
AXHelp is being appended from ancestors incorrectly
https://bugs.webkit.org/show_bug.cgi?id=37659
Summary
AXHelp is being appended from ancestors incorrectly
chris fleizach
Reported
2010-04-15 09:22:17 PDT
If an element is a child of a table with a summary, the element will use the table's summary as the help text, which is weird and wrong
Attachments
patch
(9.58 KB, patch)
2010-04-15 09:40 PDT
,
chris fleizach
bdakin
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2010-04-15 09:40:06 PDT
Created
attachment 53443
[details]
patch
WebKit Commit Bot
Comment 2
2010-04-15 10:16:56 PDT
Comment on
attachment 53443
[details]
patch Rejecting patch 53443 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--quiet']" exit_code: 1 Running build-dumprendertree Compiling Java tests make: Nothing to be done for `default'. Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 12684 test cases. platform/mac/accessibility/unexpected-help-text.html -> failed Exiting early after 1 failures. 9417 tests run. 237.91s total testing time 9416 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 9 test cases (<1%) had stderr output Full output:
http://webkit-commit-queue.appspot.com/results/1609520
chris fleizach
Comment 3
2010-04-15 10:37:43 PDT
did the commit-queue build this patch i wonder
chris fleizach
Comment 4
2010-04-15 14:06:14 PDT
http://trac.webkit.org/changeset/57674
WebKit Review Bot
Comment 5
2010-04-15 15:15:46 PDT
http://trac.webkit.org/changeset/57674
might have broken Tiger Intel Release and Leopard Intel Release (Tests) The following changes are on the blame list:
http://trac.webkit.org/changeset/57674
http://trac.webkit.org/changeset/57675
http://trac.webkit.org/changeset/57676
chris fleizach
Comment 6
2010-04-15 15:22:06 PDT
working on fix
James Robinson
Comment 7
2010-04-15 15:23:33 PDT
This seems to have broken all of the OS X Release bots:
http://build.webkit.org/builders/Leopard%20Intel%20Debug%20(Tests)/builds/12960/steps/layout-test/logs/stdio
for example: platform/mac/accessibility/unexpected-help-text.html -> failed can you please fix or revert to get the bots green? Thanks
chris fleizach
Comment 8
2010-04-15 15:26:36 PDT
it only broke leopard and tiger.
James Robinson
Comment 9
2010-04-15 15:29:28 PDT
Yes, my bad. Snow Leopard has a different failure currently.
chris fleizach
Comment 10
2010-04-15 15:31:19 PDT
this should do it
http://trac.webkit.org/changeset/57681
Eric Seidel (no email)
Comment 11
2010-04-16 11:48:12 PDT
The commit queue did build it. :) And then rejected it due to a failing test. :)
chris fleizach
Comment 12
2010-04-16 11:53:29 PDT
yea, didn't realize which builder it was failing on and didn't realize that other tests would also fail. my fault
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug