AXHelp is being appended from ancestors incorrectly https://bugs.webkit.org/show_bug.cgi?id=37659

Reviewed by Beth Dakin.

WebCore:

Test: platform/mac/accessibility/unexpected-help-text.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::helpText):

WebKitTools:

* DumpRenderTree/AccessibilityUIElement.cpp:
(getHelpTextCallback):
(AccessibilityUIElement::getJSClass):
* DumpRenderTree/AccessibilityUIElement.h:
* DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
(AccessibilityUIElement::helpText):
* DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::helpText):
* DumpRenderTree/win/AccessibilityUIElementWin.cpp:
(AccessibilityUIElement::helpText):

LayoutTests:

* platform/mac/accessibility/table-attributes-expected.txt:
* platform/mac/accessibility/table-sections-expected.txt:
     Update tests because they were wrong. AXCells should not have their AXHelp come from the AXTable.
* platform/mac/accessibility/unexpected-help-text-expected.txt: Added.
* platform/mac/accessibility/unexpected-help-text.html: Added.



Canonical link: https://commits.webkit.org/48961@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57674 268f45cc-cd09-0410-ab3c-d52691b4dbfc