WebKitTools/DumpRenderTree/AccessibilityUIElement.h
@@ -105,6 +105,7 @@ public:
     JSStringRef language();
     JSStringRef stringValue();
     JSStringRef accessibilityValue() const;
+    JSStringRef helpText() const;
     JSStringRef orientation() const;
     double x();
     double y();
