WebKitTools/DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp
@@ -224,6 +224,11 @@ JSStringRef AccessibilityUIElement::language()
     return JSStringCreateWithCharacters(0, 0);
 }
 
+JSStringRef AccessibilityUIElement::helpText() const
+{
+    return 0;
+}
+
 double AccessibilityUIElement::x()
 {
     int x, y;
