WebKitTools/DumpRenderTree/win/AccessibilityUIElementWin.cpp
@@ -236,6 +236,11 @@ JSStringRef AccessibilityUIElement::language()
     return JSStringCreateWithCharacters(0, 0);
 }
 
+JSStringRef AccessibilityUIElement::helpText() const
+{
+    return 0;
+}
+
 double AccessibilityUIElement::x()
 {
     long x, y, width, height;
